--- a/compose.yaml
+++ b/compose.yaml
@@ -1,5 +1,3 @@
-version: "3.9"
-
 services:
   backend:
     build: ./backend
@@ -7,14 +5,16 @@ services:
       - ./.env.local
     container_name: mymap-backend
     ports:
-      - "4000:4000"
+      - "3001:3001"
+    # environment:
+    #   DB_HOST: ${DB_HOST}
+    #   DB_PORT: ${DB_PORT}
+    #   DB_USER: ${DB_USER}
+    #   DB_PASSWORD: ${DB_PASSWORD}
+    #   DB_NAME: ${DB_NAME}
+    #   JWT_SECRET: ${JWT_SECRET}
     environment:
-      DB_HOST: ${DB_HOST}
-      DB_PORT: ${DB_PORT}
-      DB_USER: ${DB_USER}
-      DB_PASSWORD: ${DB_PASSWORD}
-      DB_NAME: ${DB_NAME}
-      JWT_SECRET: ${JWT_SECRET}
+      NODE_ENV: production
     depends_on: []
     restart: unless-stopped
 
@@ -22,9 +22,9 @@ services:
     build: ./frontend
     container_name: mymap-frontend
     ports:
-      - "5173:5173"
+      - "5173:3000"
     environment:
-      VITE_API_URL: http://localhost:4000
+      VITE_API_URL: http://localhost:3001 # should match backend port
     depends_on:
       - backend
     restart: unless-stopped
